# hwpx-filler

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  demo.html  wizard.html
.github/workflows/: deploy.yml  npm-publish.yml
examples/: debug_events.rs  debug_patch.rs  debug_raw.rs  debug_tables.rs  test_clone.rs  test_extract.rs  test_koica.rs  test_llm_format.rs  test_patch.rs  test_scenarios.rs  test_wizard_flow.rs
policies/: index.json
src/: analyzer.rs  error.rs  extractor.rs  filler.rs  lib.rs  llm_format.rs  main.rs  model.rs  parser.rs  patcher.rs  stream_analyzer.rs  validate.rs  wasm.rs  zipper.rs
tests/: integration.rs
tests/fixtures/: 서식5_이력사항.hwpx  최악의서식.hwpx  코이카서식.hwpx  테스트_보람.hwpx
worker/: package.json  schema.sql  wrangler.toml
worker/src/: index.ts
