[package]
name = "hwpx-filler"
version = "0.1.0"
edition = "2024"
description = "Universal HWPX form-filling engine — parse, analyze, fill, clone rows, validate"
license = "MIT"
keywords = ["hwpx", "hangul", "form", "automation", "korean"]

[dependencies]
# XML: proper parser via serde, inspired by openhwp's approach
quick-xml = { version = "0.37", features = ["serde", "serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ZIP: binary-safe HWPX handling
zip = { version = "4", default-features = false, features = ["deflate"] }

# CSV: Firebase export support
csv = "1"

# WASM bindings
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }

# Error handling
thiserror = "2"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hwpx-fill"
path = "src/main.rs"

[dev-dependencies]
insta = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
strip = true
